# CI2024_project-work

./: adf_main.py  main.py  pyproject.toml  run_main.py  s318684.py
src/: exp_log.py  gp_random.py  plots.py  project_primitive.py  runs.py
src/toolbox/: gp_algorithms.py  gp_bloat_control.py  gp_expr_op.py  gp_objects.py  gp_population.py  gp_statistics.py
