[tool.poetry]
name = "project-symreg"
version = "0.1.0"
description = ""
authors = ["Samuele Vanini <samuele.vanini@live.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.2.2"
networkx = "^3.4.2"
pydot = "^3.0.4"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
